--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,17 +23,18 @@ section {
 
 .container .hexagonArea {
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container .hexagonArea .hexagon {
     position: relative;
-    width: 90px;
-    height: 100px;
-    margin: 0 5px;
+    width:  12%;
+    height: 14%;
+    margin: 0 10px;
     clip-path: polygon(0 25%, 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%);
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: lightblue;
     flex-direction: column;   
 }
