--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,3 +44,21 @@ section {
     align-items: center;
     flex-direction: column;   
 }
+
+@media screen and (max-width: 768px) {
+    .sidebar {
+        width:0%
+    }
+    .body {
+        width:100%;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .sidebar {
+        width:10%
+    }
+    .body {
+        width:90%;
+    }
+}
