--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,10 @@
 
 body {
     font-family: "Open Sans", sans-serif;
+    background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+    color: #E0E0E0;
+
+    
 }
 
 html {
@@ -54,11 +58,3 @@ section {
     }
 }
 
-@media screen and (min-width: 768px) {
-    .sidebar {
-        width:10%
-    }
-    .body {
-        width:90%;
-    }
-}
